--- a/my-react-app/src/components/Navbar.css
+++ b/my-react-app/src/components/Navbar.css
@@ -13,7 +13,7 @@
 .header-container {
     max-width: 1400px;
     margin: 0 auto;
-    padding: 0 3rem;
+    padding: 0 3rem 0 180px;
     height: 100%;
     display: flex;
     justify-content: space-between;
